<resources>
    <string name="app_name">Jodi Milan</string>
    <string name="default_new_web_client_id">418534357603-ntp7jv73131jjai2h5gmdv74ab8fcs75.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest_Login</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_privacyPolicy">Privacy Policy</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="product_title">Username</string>
    <string name="menu_subscription">Subscriptions</string>

    <string name="nice_html">
<![CDATA[
<h2><font color=#8f0e0e>Membership</h2>
<h2>Free Membership Benefits</h2></font>
<ul>
  <li>You can Add and Manage your displayed profiles</li>
  <li>Edit your profile.</li>
  <li>Upload your photo.</li>
  <li>Express Interest - send "Express Interest" messages to anyone you like.</li>
  <li>Reply to Personalised Messages - you can reply to personalised messages sent by paid members.</li>
  <li>Your profile will be available to all our paid members. There will be one way traffic. Our paid members can get your details from jodimilanmatrimonial.com and can contact you but you cannot get their contact details so you cannot contact them.
Paid Membership Benefits</li>
  <li>You can Add and Manage your displayed profiles</li>
  <li>Edit your profile.</li>
  <li>Upload your photo.</li>
  <li>Advance Search Facility</li>
  <li>Send personalised messages with your contact details to all members</li>
  <li>Receive Messages (Conveying interest) in your mail Box.</li>
  <li>Express Interest - send "Express Interest" messages to anyone you like.</li>
  <li> Reply to Personalised Messages you can reply to personalised messages sent by paid members.</li>
  <li></li>
  </ul>

  <h2><font color=#8f0e0e>SILVER PLAN(Duration: 3 Month)</font></h2>
  <p>Total Contact: 120 Costs Rs.: 5600/-</p>
  <p>You can add and manage your displayed profile.</p>
  <ul>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
  <li>For Upgrade Your Membership Click Here.</li>
</ul>

  <h3><font color=#8f0e0e>GOLD PLAN(Duration: 6 Month)</font></h3>
  <p>Total Contact: 160 Costs Rs.: 8500/-</p>
<ul>
  <li>You can add and manage your displayed profile.</li>
  <li>You can modify your profile.</li>
  <li>You can create your photo album with 5 photos.</li>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>You can CHAT with other members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
</ul>



<h2><font color=#8f0e0e>DIAMOND PLAN(Duration: 12 Month)</font></h2>
  <p>Total Contact: 200 Costs Rs.: 11000/-</p>

<ul>
  <li>You can modify your profile.</li>
  <li>You can create your photo album with 5 photos.</li>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>You can CHAT with other members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
</ul>

<h2><font color=#8f0e0e>PLATINUM PLAN(Duration: 18 Month)</font></h2>
  <p>Total Contact: 300 Costs Rs.: 15000/-</p>
  <p>You can add and manage your displayed profile.</p>
<ul>
  <li>You can modify your profile.</li>
  <li>You can create your photo album with 8 photos.</li>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>You can CHAT with other members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
</ul>

<h2><font color=#8f0e0e>TITANIUM PLAN(Duration: 28 Month)</font></h2>
  <p>Total Contact: 450 Costs Rs.: 35000/-</p>
  <p>You can add and manage your displayed profile.</p>
<ul>
  <li>You can modify your profile.</li>
  <li>You can create your photo album with 10 photos.</li>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>You can CHAT with other members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
</ul>

<h2><font color=#8f0e0e>PERSONAL PLAN(Duration: 36 Month)</font></h2>
  <p>Total Contact: 620 Costs Rs.: 55000/-</p>
  <p>You can add and manage your displayed profile.</p>
<ul>
  <li>You can modify your profile.</li>
  <li>You can create your photo album with Unlimited photos.</li>
  <li>Send personalized messages - You can send personalized message to the members.</li>
  <li>You can CHAT with other members.</li>
  <li>Personalized reply to messages - You can reply to personalized message sent by members.</li>
  <li>Express Interest -"Express Interest" messages to anyone you like.</li>
</ul>

]]>
</string>
    <string name="action_logout">Logout</string>

</resources>