<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.filter.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter" />
    <fragment
        android:id="@+id/nav_subscriptions"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.subscription.SubscriptionFragment"
        android:label="@string/menu_subscription"
        tools:layout="@layout/fragment_subscriptions" />
    <fragment
        android:id="@+id/nav_privacyPolicy"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.privacyPolicy.PrivacyPolicyFragment"
        android:label="@string/menu_privacyPolicy"
        tools:layout="@layout/fragment_privacypolicy" />
    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.jodimilans.matrimonial.ActivityConatiner.Body.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_aboutUs"
        tools:layout="@layout/fragment_about_us" />


</navigation>